--- a/aula01.ipynb
+++ b/aula01.ipynb
@@ -28,20 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Instalando bibliotecas\n",
     "# !pip install -q U watermark\n",
-    "# !pip install -q ipython -sql\n",
+    "!pip install -q ipython-sql\n",
     "# !pip install -q psycopg2\n",
     "# !pip install -q pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "(768, 9)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "767                     0.315   23        0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,22 +408,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Código da Aula\n",
     "\n",
     "#Itere sobre as linhas do Dataframe e insira as linhas no Banco de Dados\n",
-    "#for index, row in df.iterrows():\n",
-    "    #crsr.execute(\"\"\"INSERT INTO public.diabetes(pregnancies, glucose, blood_pressure, skin_thickness,\n",
-    "                 #insulin, bmi, diabetes_pedigree_function, age, outcome)\n",
-    "                 #VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\"\"\",\n",
-    "                 #(row['Pregnancies'], row['Glucose'], row['BloodPressure'], row['SkinThickness'], row['Insulin'], row['BMI'],\n",
-    "                  #row['DiabetesPedigreeFunction'], row['Age'], row['Outcome']))\n",
+    "for index, row in df.iterrows():\n",
+    "    crsr.execute(\"\"\"INSERT INTO public.diabetes(pregnancies, glucose, blood_pressure, skin_thickness,\n",
+    "                 insulin, bmi, diabetes_pedigree_function, age, outcome)\n",
+    "                 VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\"\"\",\n",
+    "                 (row['Pregnancies'], row['Glucose'], row['BloodPressure'], row['SkinThickness'], row['Insulin'], row['BMI'],\n",
+    "                  row['DiabetesPedigreeFunction'], row['Age'], row['Outcome']))\n",
     "\n",
     "# Commit para efetivar as alterações\n",
-    "#conn.commit()\n",
+    "conn.commit()\n",
     "\n",
     "#Fechar o cursor\n",
     "#crsr.close()"
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,17 +462,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Carregando a extensão\n",
-    "%load_ext sql"
+    "%reload_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2304</td>\n",
+       "            <td>11520</td>\n",
        "            <td>148</td>\n",
        "            <td>72</td>\n",
        "            <td>35</td>\n",
@@ -525,7 +525,7 @@
        "            <td>6</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2305</td>\n",
+       "            <td>11521</td>\n",
        "            <td>85</td>\n",
        "            <td>66</td>\n",
        "            <td>29</td>\n",
@@ -537,7 +537,7 @@
        "            <td>1</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2306</td>\n",
+       "            <td>11522</td>\n",
        "            <td>183</td>\n",
        "            <td>64</td>\n",
        "            <td>0</td>\n",
@@ -549,7 +549,7 @@
        "            <td>8</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2307</td>\n",
+       "            <td>11523</td>\n",
        "            <td>89</td>\n",
        "            <td>66</td>\n",
        "            <td>23</td>\n",
@@ -561,7 +561,7 @@
        "            <td>1</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2308</td>\n",
+       "            <td>11524</td>\n",
        "            <td>137</td>\n",
        "            <td>40</td>\n",
        "            <td>35</td>\n",
@@ -576,47 +576,37 @@
        "</table>"
       ],
       "text/plain": [
-       "[(2304, 148, 72, 35, 0, Decimal('33.6'), Decimal('0.627'), 50, 1, 6),\n",
-       " (2305, 85, 66, 29, 0, Decimal('26.6'), Decimal('0.351'), 31, 0, 1),\n",
-       " (2306, 183, 64, 0, 0, Decimal('23.3'), Decimal('0.672'), 32, 1, 8),\n",
-       " (2307, 89, 66, 23, 94, Decimal('28.1'), Decimal('0.167'), 21, 0, 1),\n",
-       " (2308, 137, 40, 35, 168, Decimal('43.1'), Decimal('2.288'), 33, 1, 0)]"
+       "[(11520, 148, 72, 35, 0, Decimal('33.6'), Decimal('0.627'), 50, 1, 6),\n",
+       " (11521, 85, 66, 29, 0, Decimal('26.6'), Decimal('0.351'), 31, 0, 1),\n",
+       " (11522, 183, 64, 0, 0, Decimal('23.3'), Decimal('0.672'), 32, 1, 8),\n",
+       " (11523, 89, 66, 23, 94, Decimal('28.1'), Decimal('0.167'), 21, 0, 1),\n",
+       " (11524, 137, 40, 35, 168, Decimal('43.1'), Decimal('2.288'), 33, 1, 0)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Selecionando a tabela diabetes\n",
-    "%%sql\n",
     "\n",
-    "SELECT * FROM diabetes LIMIT 5"
+    "\n",
+    "%sql SELECT * FROM diabetes LIMIT 5;\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://postgres:***@localhost/t3_stage\n",
-      "Done.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (587224619.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[34], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    CREATE TABLE IF NOT EXISTS public.pacientes\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -626,43 +616,24 @@
     "CREATE TABLE IF NOT EXISTS public.pacientes\n",
     "(\n",
     "    id serial,\n",
-    "    pregnacies integer,\n",
+    "    pregnancies integer,\n",
     "    glucose integer,\n",
     "    blood_pressure integer,\n",
-    "    skin_thicknes integer,\n",
+    "    skin_thickness integer,\n",
     "    insulin integer,\n",
     "    bmi numeric(18,1),\n",
     "    diabetes_pedigree_function numeric(18,3),\n",
     "    age integer,\n",
     "    outcome integer,\n",
     "    CONSTRAINT pacientes_pkey PRIMARY KEY (id)\n",
-    ")"
+    ");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://postgres:***@localhost/t3_stage\n",
-      "81 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Inserindo os dados na tabela pacientes\n",
     "%%sql\n",
@@ -677,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +665,7 @@
        "[]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,32 +679,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://postgres:***@localhost/t3_stage\n",
-      "76 rows affected.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2067748887.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[17], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    UPDATE public.pacientes\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "##Atualize o perfil para 'Normal' para pacientes com bmi < 30\n",
+    "\n",
     "%%sql\n",
     "\n",
-    "-- Atualize o perfil para 'Normal' para pacientes com bmi < 30\n",
     "UPDATE public.pacientes\n",
     "SET perfil = 'Normal'\n",
     "WHERE bmi < 30;\n"
@@ -764,9 +726,10 @@
     }
    ],
    "source": [
+    "#Atualize o perfil para 'Obeso' para pacientes com bmi >= 30\n",
+    "\n",
     "%%sql\n",
     "\n",
-    "-- Atualize o perfil para 'Obeso' para pacientes com bmi >= 30\n",
     "UPDATE public.pacientes\n",
     "SET perfil = 'Obeso'\n",
     "WHERE bmi >= 30;\n"
@@ -774,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
